<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts Manager</string>
    <string name="action_settings">Settings</string>
    <string name="show_additional">Show Additional Fields</string>
    <string name="hide_additional">Hide Additional Fields</string>
    <string name="name">Name</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="job_title">Job Title</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="im">IM</string>
    <string name="phone_error">Nu a fost introdus niciun numar de telefon!</string>

</resources>
