<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:orientation="vertical" >
	
    <Button
		android:id="@+id/button_additional_fields"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:text="@string/show_additional"
		android:layout_gravity="right" />
	
	<EditText
		android:id="@+id/contact_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="text"
		android:hint="@string/name" />
	
	<EditText
		android:id="@+id/phone_number"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="phone"
		android:hint="@string/telephone"
		android:enabled="false" />
	
	<EditText
		android:id="@+id/email_address"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="textEmailAddress"
		android:hint="@string/email" />
	
	<EditText
		android:id="@+id/contact_address"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="textPostalAddress"
		android:hint="@string/address" />
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center" >
		
	    <Button
			android:id="@+id/button_save"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/save"
			android:layout_marginRight="10dp" />
	    
	    <Button
			android:id="@+id/button_cancel"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/cancel" />
		
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/layout_additional_fields"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:visibility="invisible" >
		
	    <EditText
			android:id="@+id/job_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:hint="@string/job_title" />
		
		<EditText
			android:id="@+id/company"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:hint="@string/company" />
		
		<EditText
			android:id="@+id/website"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:hint="@string/website" />
		
		<EditText
			android:id="@+id/im"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:hint="@string/im" />
		
	</LinearLayout>
	
</LinearLayout>
